--- a/my-react19-app/src/index.css
+++ b/my-react19-app/src/index.css
@@ -63,6 +63,7 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #4b20e7;
+    margin-left: 10px;
   }
 }
